added the chowder recipe page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Recipe page</h1>
+    <h1>Top 3 Favorite Recipes</h1>
+    <ol>
+        <li><a href="./recipes/chowder.html">Turkey Potato Chowder.</a></li>
+    </ol>
 </body>
-</html>
+</html> 
