added two more recipes with their respected html files. Index was updated to include links to the new recipes.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Top 3 Favorite Recipes</h1>
     <ol>
         <li><a href="./recipes/chowder.html">Turkey Potato Chowder.</a></li>
+        <li><a href="./recipes/ham-and-cheese-sliders.html">Baked Ham and Cheese Silders</a></li>
+        <li><a href="./recipes/baby-back-ribs.html">Slow Cooker Baby Back Ribs</a></li>
     </ol>
 </body>
 </html> 
